--- a/style.css
+++ b/style.css
@@ -289,8 +289,9 @@ body{
     margin-top: .18rem;
 }
 
+
 .services-section .cta-box{
-    padding: 0 0 4rem;
+    padding: 0 0 0rem;
 }
 
 /* Form Section */
@@ -324,7 +325,7 @@ body{
     font-weight: 700;
     letter-spacing: .04em;
     text-transform: uppercase;
-    margin-bottom: 1.4rem;
+    margin-bottom: 2rem;
    
 }
 
